# notorious-r-a-g

./: .env.example  .gitignore  README.md  channel_messages.json  diagram.mermaind  discord_json.py  hello.py  pyproject.toml  requirements.txt  rxconfig.py
api/: README.md  crawl_docs.py  discord_thread.py  fix_markdown.py  hello.py  ingest_docs.py  ingest_threads.py  models.py  pyproject.toml  requirements.txt  test.html  test_script.py
api/notorious_r_a_g/: notorious_r_a_g.py  rag_simple.py  state.py  style.py
api/pipeline/: db.py  pipeline_steps.py
baml_src/: chat.baml  clients.baml  formulate-answer.baml  generators.baml
discord_json/: channel_messages.json  discord_json.py  discord_threads.py  thread_messages.json  thread_messages_1119375594984050779.json  thread_messages_1253172325205934181.json  thread_messages_1253172394345107466.json
hack/: rebuild-ts-api-client.sh
hacky-discord-stuff/: api-server.py  discord_bot.py  discord_documents.json
notorious_r_a_g/: rag_qa_pinecone.py  rag_simple.py
notorious_r_a_g/backend/: rag_qa_pinecone.py
notorious_r_a_g/components/: card.py  navbar.py  notification.py
webapp/: firebase.tsx  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
webapp/app/: ActionBubble.tsx  AgentDashboard.tsx  Question.tsx  QuestionViewer.tsx  QuestionsList.tsx  constants.tsx  layout.tsx  page.tsx  utils.ts
webapp/hooks/: firebaseListener.ts
webapp/lib/apiClient/: index.ts
webapp/lib/apiClient/models/: Question.ts
