[project]
name = "notorious-r-a-g"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix-otel>=0.5.1",
    "baml-py>=0.60.0",
    "composio-llamaindex>=0.5.11",
    "discord>=2.3.2",
    "fastapi>=0.115.0",
    "firebase-admin>=6.5.0",
    "ipython>=8.28.0",
    "llama-index-core>=0.10.43",
    "llama-index-embeddings-mistralai>=0.2.0",
    "llama-index-llms-text-generation-inference>=0.2.2",
    "llama-index-vector-stores-pinecone>=0.2.1",
    "llama-index>=0.11.17",
    "llama-parse>=0.5.7",
    "openinference-instrumentation-llama-index>=2",
    "opentelemetry-proto>=1.12.0",
    "pinecone>=5.3.1",
    "python-dotenv>=1.0.1",
    "python-socketio>=5.11.4",
    "reflex>=0.6.2.post1",
]

[tool.uv.workspace]
members = ["api"]
