[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "firebase-admin>=6.5.0",
    "python-dotenv>=1.0.1",
    "baml-py>=0.60.0",
    "discord>=2.3.2",
    "firebase-admin>=6.5.0",
    "ipython>=8.28.0",
    "llama-index-embeddings-mistralai>=0.2.0",
    "llama-index-llms-text-generation-inference>=0.2.2",
    "llama-index-vector-stores-pinecone>=0.2.1",
    "llama-index>=0.11.17",
    "llama-parse>=0.5.7",
    "pinecone>=5.3.1",
    "python-dotenv>=1.0.1",
    "python-socketio>=5.11.4",
    "reflex>=0.6.2.post1",
    "html2text>=2024.2.26",
    "markdownify>=0.13.1",
    "humanlayer==0.5.8",
]
